added javascript fuctions for timer and score board

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         
         <!-- Multiple choice questions and answers -->
-        <div class="container-md d-none" id="Q-ACode">
+        <div class="container-md d-none" id="quiz-container">
             <div class="row justify-content-center pt-5 pb-5 bg-primary">
                 <div class="col-10 col-lg-8" id="QA-block">
                     <h3 id="questions" class="mb-4">Questions</h3>
@@ -67,10 +67,9 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         
-        <script src="quiz-questions.js"></script>
-        <script src="script.js"></script>
+        <script src="quizQuestions.js"></script>
+        <script src="mainscript.js"></script>
     </body>
 </html>
 
 
-<!--https://www.youtube.com/watch?v=49pYIMygIcU -->
