--- a/viewscores.html
+++ b/viewscores.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Score board page -->
     <div class="container-md" id="main">
         <div class="row justify-content-center pt-5 pb-5 bg-primary">
             <div class="col-10 col-lg-8 text-center">
                 <h3 id="scoresTitle">View High Scores</h3>
                 <ol id='score-list' class="mb-4"></ol>
-                <button type="button" class="btn btn-info btn-sm restartBtn">Restart</button>
+                <button type="button" class="btn btn-info btn-sm restartBtn">Start Again</button>
                 <button type="button" class="btn btn-info btn-sm clearBtn">Clear History</button>
             </div>
         </div>
